# python-clicommands

./: README.md  pyproject.toml
.github/workflows/: ci.yml  clicommands.yml  release.yml
docs/: AI.md  development.md  purpose.md  structure.md
src/clicommands/: .commands.json  __init__.py  __main__.py  helpers.py  utils.py
src/clicommands/commands/: __init__.py  args.py  base.py  copy.py  version.py
src/clicommands/templates/: django.py
tests/: __init__.py  test_args.py  test_base.py  test_copy.py  test_helpers.py  test_utils.py
